--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,6 @@
-<h1>Home Page</h1>
+<form action="/new" method="post">
+    <input type="text" name="fullname" placeholder="Write your fullname" id="">
+    <input type="text" name="email" placeholder="Write your email" id="">
+    <input type="text" name="phone" placeholder="Write your phone" id="">
+    <button>Save</button>
+</form>
