--- a/templates/index.html
+++ b/templates/index.html
@@ -4,3 +4,19 @@
     <input type="text" name="phone" placeholder="Write your phone" id="">
     <button>Save</button>
 </form>
+
+<div>
+    {% for contact in contacts %}
+        <div>
+            <h5>{{contact.fullname}}</h5>
+            <div>
+                <a href="{{ url_for('contacts.update') }}">Update</a>
+                <a href="{{ url_for('contacts.delete') }}">Delete</a>
+            </div>
+            <p>{{contact.email}}</p>
+            <p>{{contact.phone}}</p>
+
+            
+        </div>
+    {% endfor %}
+</div>
