--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,13 @@
+{% with messages = get_flashed_messages() %}
+
+
+{% if messages %}
+    {% for message in messages %}
+        {{message}}
+    {% endfor %}
+{% endif %}
+
+{% endwith %}
 <form action="/new" method="post">
     <input type="text" name="fullname" placeholder="Write your fullname" id="">
     <input type="text" name="email" placeholder="Write your email" id="">
