--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,37 @@
-{% with messages = get_flashed_messages() %}
+{% extends 'layout.html' %}
+
+{% block content %}    
+    {% with messages = get_flashed_messages() %}
 
 
-{% if messages %}
-    {% for message in messages %}
-        {{message}}
-    {% endfor %}
-{% endif %}
+    {% if messages %}
+        {% for message in messages %}
+            {{message}}
+        {% endfor %}
+    {% endif %}
 
-{% endwith %}
-<form action="/new" method="post">
-    <input type="text" name="fullname" placeholder="Write your fullname" id="">
-    <input type="text" name="email" placeholder="Write your email" id="">
-    <input type="text" name="phone" placeholder="Write your phone" id="">
-    <button>Save</button>
-</form>
+    {% endwith %}
+    <form action="/new" method="post">
+        <input type="text" name="fullname" placeholder="Write your fullname" id="">
+        <input type="text" name="email" placeholder="Write your email" id="">
+        <input type="text" name="phone" placeholder="Write your phone" id="">
+        <button>Save</button>
+    </form>
 
-<div>
-    {% for contact in contacts %}
-        <div>
-            <h5>{{contact.fullname}}</h5>
+    <div>
+        {% for contact in contacts %}
             <div>
-                <a href="{{ url_for('contacts.update', id=contact.id) }}">Update</a>
-                <a href="{{ url_for('contacts.delete', id=contact.id) }}">Delete</a>
-            </div>
-            <p>{{contact.email}}</p>
-            <p>{{contact.phone}}</p>
+                <h5>{{contact.fullname}}</h5>
+                <div>
+                    <a href="{{ url_for('contacts.update', id=contact.id) }}">Update</a>
+                    <a href="{{ url_for('contacts.delete', id=contact.id) }}">Delete</a>
+                </div>
+                <p>{{contact.email}}</p>
+                <p>{{contact.phone}}</p>
 
-            
-        </div>
-    {% endfor %}
-</div>
+                
+            </div>
+        {% endfor %}
+    </div>
+
+{% endblock %}
