--- a/templates/update.html
+++ b/templates/update.html
@@ -1,8 +1,12 @@
-<h1>Update</h1>
+{% extends 'layout.html '%}
 
-<form action="/update/{{contact.id}}" method="post">
-    <input type="text" name="fullname" placeholder="Write your fullname" value="{{contact.fullname}}">
-    <input type="text" name="email" placeholder="Write your email" value="{{contact.email}}">
-    <input type="text" name="phone" placeholder="Write your phone" value="{{contact.phone}}">
-    <button>Update</button>
-</form>
+{% block content %}
+    <h1>Update</h1>
+
+    <form action="/update/{{contact.id}}" method="post">
+        <input type="text" name="fullname" placeholder="Write your fullname" value="{{contact.fullname}}">
+        <input type="text" name="email" placeholder="Write your email" value="{{contact.email}}">
+        <input type="text" name="phone" placeholder="Write your phone" value="{{contact.phone}}">
+        <button>Update</button>
+    </form>
+{% endblock %}
