--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,32 @@
 {% extends 'layout.html' %}
 
 {% block content %}    
-    {% with messages = get_flashed_messages() %}
+    
+    
+    <div class="row">
+        <div class="col-md-5">
+            {% include('partials/_message.html')%}
+            {% include('partials/_contactForm.html')%}
+        </div>
 
-
-    {% if messages %}
-        {% for message in messages %}
-            {{message}}
-        {% endfor %}
-    {% endif %}
-
-    {% endwith %}
-    <form action="/new" method="post">
-        <input type="text" name="fullname" placeholder="Write your fullname" id="">
-        <input type="text" name="email" placeholder="Write your email" id="">
-        <input type="text" name="phone" placeholder="Write your phone" id="">
-        <button>Save</button>
-    </form>
-
-    <div>
-        {% for contact in contacts %}
-            <div>
-                <h5>{{contact.fullname}}</h5>
-                <div>
-                    <a href="{{ url_for('contacts.update', id=contact.id) }}">Update</a>
-                    <a href="{{ url_for('contacts.delete', id=contact.id) }}">Delete</a>
+        <div class="col-md-7">
+            {% for contact in contacts %}
+                <div class="card mb-1 text-white bg-dark">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <h5>{{contact.fullname}}</h5>
+                            <div>
+                                <a href="{{ url_for('contacts.update', id=contact.id) }}" class="btn bg-black btn-sm rounded-0 text-white">Update</a>
+                                <a href="{{ url_for('contacts.delete', id=contact.id) }}" class="btn btn-danger btn-sm rounded-0">Delete</a>
+                            </div>
+                        </div>
+                        <p>{{contact.email}}</p>
+                        <p>{{contact.phone}}</p>
+                    </div>
+                    
                 </div>
-                <p>{{contact.email}}</p>
-                <p>{{contact.phone}}</p>
-
-                
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 
 {% endblock %}
