--- a/templates/update.html
+++ b/templates/update.html
@@ -1,12 +1,42 @@
-{% extends 'layout.html '%}
+{% extends "layout.html" %} 
 
 {% block content %}
-    <h1>Update</h1>
+<div class="col-md-4 offset-md-4">
+  <div class="card card-body bg-dark text-white">
+    <h1>Edit Task</h1>
 
-    <form action="/update/{{contact.id}}" method="post">
-        <input type="text" name="fullname" placeholder="Write your fullname" value="{{contact.fullname}}">
-        <input type="text" name="email" placeholder="Write your email" value="{{contact.email}}">
-        <input type="text" name="phone" placeholder="Write your phone" value="{{contact.phone}}">
-        <button>Update</button>
+    <form action="{{url_for('contacts.update', id=contact.id)}}" method="POST">
+      <div class="mb-3">
+        <label for="fullname">Write your fullname:</label>
+        <input
+          type="text"
+          name="fullname"
+          value="{{contact.fullname}}"
+          class="form-control bg-dark text-white rounded-0"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="email">Write your email:</label>
+        <input
+          type="email"
+          name="email"
+          value="{{contact.email}}"
+          class="form-control bg-dark text-white rounded-0"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="phone">Write your phone:</label>
+        <input
+          type="tel"
+          name="phone"
+          value="{{contact.phone}}"
+          class="form-control bg-dark text-white rounded-0"
+        />
+      </div>
+
+      <button class="btn btn-primary">Update</button>
     </form>
+  </div>
+</div>
+
 {% endblock %}
